--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,21 +1,21 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        backend_user:
+            memory:
+                users:
+                    admin: { password: 'admin', roles: ['ROLE_ADMIN'] }
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
-
-            # activate different ways to authenticate
-
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
+            http_basic: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
