--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,22 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+    defaults:
+        route: blog_index
+        # make a permanent redirection...
+        permanent: true
+
+admin_index:
+    path: /admin
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+    defaults:
+        route: admin_blog_index
+        # make a permanent redirection...
+        permanent: false
+
+
+rest_controllers:
+    resource: '../src/Controller/Rest/'
+    type:     annotation
+    prefix:   /api
+    trailing_slash_on_root: false
